# prefect-grupy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
exemplos/conceitos/: agendamento.py  biblioteca_tarefas.py  condicionais.py  parametros.py  primeira_flow.py  segredos.py
exemplos/extras/: agendamento_avancado.py  docker.py  docker_dependencias.py  ecs_basico.py
infraestrutura/: app.py
