[tool.poetry]
name = "prefect-grupy"
version = "0.1.0"
description = ""
authors = ["Gabriel Montañola <gabriel@montanola.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prefect = {extras = ["aws", "kubernetes", "viz", "templates"], version = "^0.14.19"}
pandas = "^1.2.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
ipdb = "^0.13.7"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
